@@ -2,7 +2,7 @@ mailto(kvehmanen -at- eca -dot- cx)
 
 manpage(ecasound)
        (1)
-       (31.03.2009)
+       (11.04.2009)
        ()
        (Multimedia software)
 
@@ -1047,6 +1047,11 @@ manpagesection(ENVIRONMENT)
 	em(ECASOUND_LOGFILE). The syntax for em(-d:level) is used. If not
 	defined, all messages are written. Defaults to -d:319 (everything else
 	but 'functions (64)' and 'continuous (128)' class messages).
+
+	dit(COLUMNS)
+	Ecasound honors the em(COLUMNS) environment variable when 
+	formatting printed trace messages. If em(COLUMNS) is not set, 
+	a default of 74 is used.
 	enddit()
 
 manpagesection(RETURN VALUES)
